--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,21 @@
-babel==2.9.0
-python-dateutil==2.6.0
-flask-moment==0.11.0
-flask-wtf==0.14.3
-flask_sqlalchemy==2.4.4
+alembic==1.10.4
+Babel==2.12.1
+blinker==1.6.2
+click==8.1.3
+Flask==2.3.2
+Flask-Migrate==4.0.4
+Flask-Moment==1.0.5
+Flask-SQLAlchemy==3.0.3
+Flask-WTF==1.1.1
+itsdangerous==2.1.2
+Jinja2==3.1.2
+Mako==1.2.4
+MarkupSafe==2.1.2
+packaging==23.1
+psycopg2==2.9.6
+python-dateutil==2.8.2
+six==1.16.0
+SQLAlchemy==2.0.12
+typing_extensions==4.5.0
+Werkzeug==2.3.4
+WTForms==3.0.1
